CSS/characterCSS.css
/* ... */
#skill-points-section {
  display: flex;
  justify-content: space-between;
  padding: 0 10px 0 10px;
  margin-top: auto;
  color: #fff;
}

.glyph-name {
  margin-top: 5px;
  font-family: PandoraDiamond;
  text-align: center;
  font-size: 1.2rem;
}

.skill-circle {
  width: 60px;
  height: 60px;
  border-radius: 50%;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #fff;
}

.inner-skill-circle {
  width: 90%;
  height: 90%;
  top: 50%;
  left: 50%;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  background: var(--bg-gradient-dark);
  color: #fff;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 18px;
  font-weight: bold;
  z-index: 6;
}

.application-section {
  border-radius: 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 2px 8px;
  margin: 2px 20px;
  background-color: #1a1a1a;
  border: 2px solid #00bfff;
}

#detail-container {
  display: grid;
  grid-template-columns: 30% 70%;
}

#main-detail-box {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 12px;
  width: 80%;
}

#side-detail-box {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  height: 490px;
  gap: 12px;
  position: relative;
}

.side-detail-list {
  display: none;
}
.side-detail-list-active {
  display: block;
  padding: 12px;
  height: 100%;
}

.app-item .stat-section-right {
  color: unset;
}

#stat-section {
  color: white;
}

#defensive-stats {
  /* padding: 20px; */
  /* border: 2px solid #00bfff; */
  /* height: 380px; */
  /* width: 385px; */
  /* margin: 10px; */
  /* margin-top: 5px; */
  color: white;
}

#float-box {
  position: absolute;
  right: 35px;
  top: 332px;
  display: none;
  border: 2px solid #a10b0b;
  color: #a10b0b;
  font-size: 20px;
  text-align: center;
  width: 170px;
  height: 80px;
}

.unconditional {
  color: #a10b0b;
}

.enhance-text {
  font-weight: bold;
  text-shadow: 1px 1px red;
  font-size: 26px;
  line-height: 1.2;
}

/* Slots */
#bottom-container {
  display: flex;
  justify-content: center;
  width: 100%;
}

#slot-buttons-container {
  display: none;
  justify-content: space-between;
  flex-direction: row;
  width: 1760px;
}

.item-slot-button {
  background: var(--bg-gradient-secondary);
  border: none;
  width: 132px;
  height: 132px;
  cursor: pointer;
  transition: all 0.3s;
  padding: 6px;
}
.item-slot-button:hover {
  padding: 0px;
  background: var(--bg-gradient-primary);
  filter: brightness(1.2);
  transition: all 0.3s;
}
.item-slot-button-active {
  background: var(--bg-gradient-primary);
  filter: brightness(1.2);
  transition: all 0.3s;
}

.item-slot-icon {
  display: block;
  width: 100%;
  height: 100%;
  background-image: url(/images/Icons/item_placeholder_106px.png);
  background-size: cover;
}

.item-slot-icon-empty {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  color: white;
  font-size: 1.5rem;
}

#slot-display {
  display: flex;
  justify-content: flex-end;
  gap: 40px;
  margin: 70px 0;
}

.item-name {
  font-size: 1.4rem;
  line-height: 1.3;
  font-family: PandoraDiamond;
  text-align: center;
  width: 80%;
  margin: 0.7rem auto 0 auto;
}

.badge-container {
  display: flex;
  justify-content: flex-start;
  padding: 0 25px 0 25px;
}

.item-name-badge,
.item-id-badge,
.item-tier-badge,
.item-gear-score-badge,
.inactive-badge,
.active-badge {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: PandoraDiamond;
  text-align: center;
  color: black;
  font-size: 16px;
  padding: 4px;
  margin: 0 0 8px 5px;
  max-width: fit-content;
}
.item-name-badge {
  background: #00bfff;
}
.item-id-badge {
  background: #ff4b4b;
}
.item-tier-badge {
  background: #2a944a;
}
.item-gear-score-badge{
  background: #E1A800;
}
.inactive-badge {
  background: rgba(255, 0, 0, 0.562);
}
.active-badge {
  background: rgba(94, 255, 0, 0.562);
}
.star-symbol{
  line-height: 1;
}

.item-thumbnail {
  width: 106px;
  height: 106px;
  margin: 0 auto;
}

#image-tarot {
  padding: 0;
  flex-direction: column;
  justify-content: flex-start;
}

#image-tarot-bg {
  display: block;
  border: none;
  min-width: 398px;
  max-width: 398px;
  min-height: 558px;
  max-height: 558px;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.artist-name {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 2.3rem;
  margin: 3px;
}

.item-slot-void {
  display: none;
  position: relative;
  min-width: 400px;
  max-width: 400px;
  min-height: 651px;
  max-height: 651px;
}

.item-slot {
  position: relative;
  min-width: 400px;
  max-width: 400px;
  min-height: 651px;
  max-height: 651px;
  background-color: #111;
  border: 1px solid white;
  padding: 0px;
  padding-top: 10px;
  font-size: 1.2rem;
  text-align: center;
  flex-direction: column;
  color: white;
}

.item-class-thumbnail {
  position: absolute;
  top: 10px;
  left: 10px;
  height: 36px;
  width: 36px;
}

.slot-toggle {
  position: absolute;
  top: 10px;
  right: 10px;
  display: none;
}

.element-icons {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 20px;
  margin: 0 0 0.8rem 0;
}

.star-container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 32px;
  margin: 0 0 0.8rem 0;
  gap: 4px;
}
.star-container img {
  width: 26px;
  height: 26px;
}

.style-line {
  width: 80%;
  margin: 8px auto;
  height: 1px;
  background-color: rgba(255, 255, 255, 0.15);
}

.item-dmg-stat,
.stat-message {
  color: white;
  text-align: left;
  width: 100%;
  padding: 0.3rem 0 0.3rem 10%;
}

.filler-slot {
  color: white;
  text-align: center;
  width: 100%;
  padding: 0.3rem 0 0.3rem 10%;
}
/* ... */

